# smc-live-trading

./: README.md  backtest.py  confluence.py  decision_engine.py  journal.py  live_smc_buffer.py  market_snapshot.py  narrative.py  orchestrator.py  pyproject.toml  setup.py  trade_simulator.py
.sisyphus/drafts/: data-manager.md  streaming-structure-engine.md
.sisyphus/evidence/: backtest-imp-done.txt  crypto-eval.txt  f1-compliance-audit.txt  f1-compliance.txt  f2-code-quality.txt  f3-full-suite.txt  f4-scope-fidelity.txt  fix1-event-id.txt  fix2-new-metrics.txt  fix3-open-trades.txt  fix4-exit-none.txt  oracle-alignment-fix-verified.txt  oracle-audit.md  oracle-bug-investigation.md  oracle-ccxt-scrutiny.md  oracle-datamanager-review.md  oracle-direction-confidence-split.md  oracle-gap-analysis.md  oracle-journal-design-review.md  oracle-scrutiny.md  (+119 more)
data/: ohlcv_BTCUSDT_1d.csv  ohlcv_BTCUSDT_1d_ta.csv
scripts/: run_bosflip_crossmarket.py
smartmoneyconcepts/: __init__.py  smc.py  structures.py
strategies/: __init__.py  bos_flip.py
tests/: conftest.py  stream_compare.py  test_analyze_ta_core.py  test_analyze_ta_io.py  test_analyze_ta_system.py  test_analyze_ta_units.py  test_causality.py  test_ccxt_data.py  test_ccxt_integration.py  test_data_manager.py  test_decision_engine.py  test_journal.py  test_live_smc_buffer.py  test_market_snapshot.py  test_narrative.py  test_orchestrator.py  test_streaming_vs_batch.py  test_structure_engine.py  unit_tests.py
trade_scripts/: __init__.py  analyze_ta.py  data_manager.py  exchange.py  fetcher.py  processor.py  storage.py
(+111 files in other folders)
